9.29 fix error